# College-C-projects

./: .gitignore  CMakeLists.txt
Lab 4/: 1_100_odevn.c  dgttoword.c  en2numodev.c
Lab 8/: myLabwork.c
Labwork/lab1/: Test.c
Labwork/lab2/addition and averages/: add 1-5 and average of 1.0...2.0.c  add_1-5_and_avg.c  addandavg.c
Labwork/lab2/surface area and volume/: Volumeandsurfacearea.c
Labwork/lab3/: decimalplaces.c  diplay3num.c  enter2char.c
Labwork/lab4/: days1_7.c  iftstbranch.c  triangle.c
Labwork/lab5/: Divide1_5.c  for_loop.c  lecture6.c  print_evnless100.c  problem2.c  problem4.c  problem5.c
assignment 1/: assignment1.c  assignment1V2.c  test2.c  testingassignment.c
